[package]
name = "pump-amm-cpi"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "1.18.1"

num-derive = "0.4.0"
rust_decimal = { version = "1.31.0", features = ["maths"] }
rust_decimal_macros = "1.31.0"
ruint = "1.3.0"
num-integer = "0.1.45"
num-traits = "0.2.16"
bigdecimal = "0.4.2"
num-bigint = "0.4"
num-rational = "0.4"
uint = "0.9.5"

[package.metadata.cargo-machete]
ignored = ["anchor-lang"]
